--- a/Blog/branches/ycy/code/webSite/Areas/onlineSell/Views/Home/Index.cshtml
+++ b/Blog/branches/ycy/code/webSite/Areas/onlineSell/Views/Home/Index.cshtml
@@ -19,15 +19,15 @@
             <a id="homepage1_HomePageDays_DaysList_ctl00_DayList_TitleUrl_0" class="postTitle2" href="/home/blog/@listBlog[i].Id">@listBlog[i].Title</a>
         </div>
         <div class="postCon">
-            <div class="cnblogs-post-body" id="postlist_postbody_6541934">
+            <div class="cnblogs-post-body" id="postlist_postbody_13734812">
                 @listBlog[i].Content
             </div>
-            <script type="text/javascript">getBlogPostBody(6541934);</script>
+            <script type="text/javascript">getBlogPostBody(13734812);</script>
         </div>
         <div class="clear"></div>
-        <div class="postDesc">posted @@ 2017-03-13 11:35 麦田怪人 阅读(1) 评论(0)  <a href="https://i.cnblogs.com/EditPosts.aspx?postid=6541934" rel="nofollow">编辑</a></div>
+        <div class="postDesc">posted @@ 2020-09-26 11:35 ycy 阅读(1) 评论(0)  <a href="https://i.cnblogs.com/EditPosts.aspx?postid=13734812" rel="nofollow">编辑</a></div>
         <div class="clear"></div>
 
     </div>
 }
-<div class="topicListFooter"><div id="nav_next_page"><a href="http://www.cnblogs.com/maijin/default.html?page=2">下一页</a></div></div>
+<div class="topicListFooter"><div id="nav_next_page"><a href="http://www.cnblogs.com/ycy0430/default.html?page=2">下一页</a></div></div>
