--- a/Blog/branches/ycy/code/webSite/Areas/onlineSell/Views/_SideBar.cshtml
+++ b/Blog/branches/ycy/code/webSite/Areas/onlineSell/Views/_SideBar.cshtml
@@ -27,7 +27,7 @@
             <div class="catListEssay">
                 <h3 class="catListTitle">最新随笔</h3>
                 <ul>
-                    <li><a href="http://www.cnblogs.com/maijin/p/6541934.html">1. 2017年3月11 12 长途绕圈台山海边练车总结</a></li>
+                    <li><a href="http://wycy.site/posts/50945/">1. flex伸缩布局案例-携程移动端首页</a></li>
 
                 </ul>
             </div>
@@ -37,7 +37,7 @@
             <div id="topview_posts_wrap">
                 <div class="catListView">
                     <h3 class="catListTitle">阅读排行榜</h3>
-                    <div id="TopViewPostsBlock"><ul><li><a href="http://www.cnblogs.com/maijin/p/3249798.html">1. Easyui + asp.net mvc + sqlite 开发教程（录屏）适合入门(12808)</a></li><li><a href="http://www.cnblogs.com/maijin/archive/2012/12/26/2834231.html">2. DataGridView设置行高(12369)</a></li></ul></div>
+                    <div id="TopViewPostsBlock"><ul><li><a href="http://wycy.site/posts/46667/">1. 初识HTTP</a></li><li><a href="http://wycy.site/posts/45468/">2. 【HTML+CSS】高仿百度首页</a></li></ul></div>
                 </div>
             </div>
         </div>
@@ -46,7 +46,7 @@
             <div id="topdigg_posts_wrap">
                 <div class="catListView">
                     <h3 class="catListTitle">推荐排行榜</h3>
-                    <div id="TopDiggPostsBlock"><ul><li><a href="http://www.cnblogs.com/maijin/p/4642280.html">1. EntityFramework 5.0 CodeFirst 教程01-搭建环境和快速上手(7)</a></li><li><a href="http://www.cnblogs.com/maijin/p/3485955.html">2. Easyui入门视频教程 第01集---认识Easyui(7)</a></li></ul></div>
+                    <div id="TopDiggPostsBlock"><ul><li><a href="http://wycy.site/posts/57655/">1. 流式布局案例-移动端京东首页</a></li><li><a href="http://wycy.site/posts/18448/">2. rem布局+less 两种方式制作苏宁移动端首页</a></li></ul></div>
                 </div>
             </div>
         </div>
