--- a/Blog/branches/ycy/code/webSite/Areas/onlineSell/Views/_LayoutPage1.cshtml
+++ b/Blog/branches/ycy/code/webSite/Areas/onlineSell/Views/_LayoutPage1.cshtml
@@ -11,17 +11,17 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>麦田怪人 - 博客园</title>
+    <title>ycy博客 - 博客园</title>
     <link type="text/css" rel="stylesheet" href="/include/index_files/blog-common.css">
     <link id="MainCss" type="text/css" rel="stylesheet" href="/include/index_files/bundle-CodingLife.css">
     <link type="text/css" rel="stylesheet" href="/include/index_files/128442.css">
     <link id="mobile-style" media="only screen and (max-width: 768px)" type="text/css" rel="stylesheet" href="/include/index_files/bundle-CodingLife-mobile.css">
-    <link title="RSS" type="application/rss+xml" rel="alternate" href="http://www.cnblogs.com/maijin/rss">
-    <link title="RSD" type="application/rsd+xml" rel="EditURI" href="http://www.cnblogs.com/maijin/rsd.xml">
-    <link type="application/wlwmanifest+xml" rel="wlwmanifest" href="http://www.cnblogs.com/maijin/wlwmanifest.xml">
+    <link title="RSS" type="application/rss+xml" rel="alternate" href="http://www.cnblogs.com/ycy0430/rss">
+    <link title="RSD" type="application/rsd+xml" rel="EditURI" href="http://www.cnblogs.com/ycy0430/rsd.xml">
+    <link type="application/wlwmanifest+xml" rel="wlwmanifest" href="http://www.cnblogs.com/ycy0430/wlwmanifest.xml">
     <script src="/include/index_files/analytics.js" async=""></script>
     <script src="/include/index_files/jquery.js" type="text/javascript"></script>
-    <script type="text/javascript">var currentBlogApp = 'maijin', cb_enable_mathjax = false; var isLogined = false;</script>
+    <script type="text/javascript">var currentBlogApp = 'ycy0430', cb_enable_mathjax = false; var isLogined = false;</script>
     <script src="/include/index_files/blog-common.js" type="text/javascript"></script>
 </head>
 <body>
@@ -31,10 +31,10 @@
     <div id="home">
         <div id="header">
             <div id="blogTitle">
-                <a id="lnkBlogLogo" href="http://www.cnblogs.com/maijin/"><img id="blogLogo" src="/include/index_files/logo.gif" alt="返回主页"></a>
+                <a id="lnkBlogLogo" href="http://wycy.site/"><img id="blogLogo" src="/include/index_files/logo.gif" alt="返回主页"></a>
 
                 <!--done-->
-                <h1><a id="Header1_HeaderTitle" class="headermaintitle" href="http://www.cnblogs.com/maijin/">@config.Name</a></h1>
+                <h1><a id="Header1_HeaderTitle" class="headermaintitle" href="http://www.cnblogs.com/ycy0430/">@config.Name</a></h1>
                 <h2>@config.Sign</h2>
 
 
@@ -43,21 +43,16 @@
             <div id="navigator">
 
                 <ul id="navList">
-                    <li><a id="blog_nav_myhome" class="menu" href="/">首页</a></li>
+                    <li><a id="blog_nav_myhome" class="menu" href="/onlineSell/Home/Index">首页</a></li>
                     @foreach (var item in listCatalog)
                     {
                         <li><a id="blog_nav_myhome" class="menu" href="/home/blog/@item.Id">@item.Name</a></li>
                     }
 
-                    @if (currentUser != null)//已经登录过了
-                    {
-                        <li><a id="blog_nav_admin" class="menu" rel="nofollow" href="/manage/index">管理</a></li>
-                    }
-                    else
-                    {
-                        <li><a id="blog_nav_admin" class="menu" rel="nofollow" href="/manage/login">登录</a></li>
-                        <li><a id="blog_nav_admin" class="menu" rel="nofollow" href="/manage/register">注册</a></li>
-                    }
+
+                    
+                        <li><a id="blog_nav_admin" class="menu" rel="nofollow" href="/">管理</a></li>
+                    
                 </ul>
                 <div class="blogStats">
 
@@ -88,7 +83,7 @@
         <div class="clear"></div>
         <div id="footer">
             <!--done-->
-            Copyright ©@DateTime.Now.Year 麦田怪人
+            Copyright ©@DateTime.Now.Year ycy
         </div><!--end: footer -->
     </div><!--end: home 自定义的最大容器 -->
 </body>
