--- a/Blog/branches/ycy/code/webSite/Areas/onlineSell/Views/Home/Index.cshtml
+++ b/Blog/branches/ycy/code/webSite/Areas/onlineSell/Views/Home/Index.cshtml
@@ -4,30 +4,38 @@
 
     var dbContext = CustomHtmlHelper.GetDbContext();
     var listBlog = dbContext.Blogs.ToList();
+    var listCatalog = dbContext.Catalogs.ToList();
 }
+@*@if(Request["catalogid"])!=""){
+    
+}*@
 
-
-@for (int i = 0; i < listBlog.Count; i++)
-{
+@for (int i = 0; i < listBlog.Count; i++){
+    if (@Convert.ToInt32(Request["catalogid"]) == 0 || @listBlog[i].catalogId == @Convert.ToInt32(Request["catalogid"]))
+    {
+    var n = @listBlog[i].catalogId-1;
     <div class="day">
+
         <div class="dayTitle">
-            <a id="homepage1_HomePageDays_DaysList_ctl00_ImageLink" href="/home/blog/@listBlog[i].Id">@listBlog[i].AddTime.ToString()</a>
+            <a id="homepage1_HomePageDays_DaysList_ctl00_ImageLink" href="/onlineSell/Home/Blog/@listBlog[i].Id">@listBlog[i].AddTime.ToString()</a>
         </div>
 
 
         <div class="postTitle">
-            <a id="homepage1_HomePageDays_DaysList_ctl00_DayList_TitleUrl_0" class="postTitle2" href="/home/blog/@listBlog[i].Id">@listBlog[i].Title</a>
+            <a id="homepage1_HomePageDays_DaysList_ctl00_DayList_TitleUrl_0" class="postTitle2" href="/onlineSell/Home/Blog/@listBlog[i].Id">@listBlog[i].Title</a>
         </div>
         <div class="postCon">
-            <div class="cnblogs-post-body" id="postlist_postbody_13734812">
+            <div class="c_b_p_desc " id="postlist_postbody_13734812">
                 @listBlog[i].Content
             </div>
             <script type="text/javascript">getBlogPostBody(13734812);</script>
         </div>
         <div class="clear"></div>
-        <div class="postDesc">posted @@ 2020-09-26 11:35 ycy 阅读(1) 评论(0)  <a href="https://i.cnblogs.com/EditPosts.aspx?postid=13734812" rel="nofollow">编辑</a></div>
+        <div class="postDesc">posted @@ @listBlog[i].AddTime.ToString() ycy 阅读(1) 评论(0) @n 分类 @listCatalog[n].Name </div>
         <div class="clear"></div>
 
     </div>
 }
-<div class="topicListFooter"><div id="nav_next_page"><a href="http://www.cnblogs.com/ycy0430/default.html?page=2">下一页</a></div></div>
+    }
+
+@*<div class="topicListFooter"><div id="nav_next_page"><a href="http://www.cnblogs.com/ycy0430/default.html?page=2">下一页</a></div></div>*@
