--- a/Blog/branches/ycy/code/webSite/Views/Login/loginAdmin.cshtml
+++ b/Blog/branches/ycy/code/webSite/Views/Login/loginAdmin.cshtml
@@ -133,7 +133,7 @@
         <img style="width: 124px; height: 124px; position: absolute; top: 50%; left: 50%; margin-left: -62px; margin-top: -62px;" src="/Content/images/loading.gif" />
     </div>
     <div id="footer">
-        技术支持：南京云宝网络有限公司   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 技术热线：15345187578 &nbsp; &nbsp; &nbsp; &nbsp;
+        框架支持：南京云宝网络有限公司   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 功能设计：Ycy &nbsp; &nbsp; &nbsp; &nbsp;
     </div>
 </body>
 </html>
