--- a/Blog/branches/ycy/code/webSite/Areas/onlineSell/Views/Home/Index.cshtml
+++ b/Blog/branches/ycy/code/webSite/Areas/onlineSell/Views/Home/Index.cshtml
@@ -31,11 +31,12 @@
             <script type="text/javascript">getBlogPostBody(13734812);</script>
         </div>
         <div class="clear"></div>
-        <div class="postDesc">posted @@ @listBlog[i].AddTime.ToString() ycy 阅读(1) 评论(0) @n 分类 @listCatalog[n].Name </div>
+        <div class="postDesc">posted @@ @listBlog[i].AddTime.ToString() ycy 阅读(1) 评论(0) @*@n 分类 @listCatalog[n].Name*@ </div>
         <div class="clear"></div>
 
     </div>
 }
+
     }
 
-@*<div class="topicListFooter"><div id="nav_next_page"><a href="http://www.cnblogs.com/ycy0430/default.html?page=2">下一页</a></div></div>*@
+<div class="topicListFooter"><div id="nav_next_page"><a href="#">下一页</a></div></div>
