--- a/Blog/branches/ycy/code/webSite/Areas/admin/Views/blog_blog/BlogAdd.cshtml
+++ b/Blog/branches/ycy/code/webSite/Areas/admin/Views/blog_blog/BlogAdd.cshtml
@@ -56,7 +56,56 @@
 
 <body>
 
-    <div>
+    <div style="width:500px;margin-top:20px">
+        @using (Html.BeginForm("blogadd", "blog_blog", FormMethod.Post))
+        {
+            <form class="layui-form" action="" style="width:500px;">
+                <div class="layui-form-item">
+                    <label class="layui-form-label">博文标题</label>
+                    <div class="layui-input-block">
+                        @Html.TextBoxFor(m => m.Title, null, new { @class = "layui-input" })
+                        @Html.ValidationMessageFor(m => m.Title)
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">博文内容</label>
+                    <div class="layui-input-block">
+                        @Html.KindEditorFor(m => m.Content, 900, 600)
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">所属分类</label>
+                    <div class="layui-input-block">
+                        @Html.DropDownListFor(m => m.catalogId, ViewBag.catalogList as List<SelectListItem>)
+                    </div>
+                </div>
+
+
+                <div class="layui-form-item">
+                    <div class="layui-input-block">
+                        <input type="submit" value="立即提交" class=" layui-btn layui-bg-blue" />
+                        <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                    </div>
+                </div>
+            </form>
+
+            <script>
+                //Demo
+                layui.use('form', function () {
+                    var form = layui.form;
+
+                    //监听提交
+                    form.on('submit(formDemo)', function (data) {
+                        layer.msg(JSON.stringify(data.field));
+                        return false;
+                    });
+                });
+            </script>
+        }
+    </div>
+
+
+    @*<div>
         @using (Html.BeginForm("blogadd", "blog_blog", FormMethod.Post))
         {
 
@@ -95,6 +144,6 @@
             </table>
 
         }
-        </div>
+        </div>*@
     </body>
 </html>
