--- a/Blog/branches/ycy/code/webSite/Areas/admin/Views/blog_blog/CatalogManage.cshtml
+++ b/Blog/branches/ycy/code/webSite/Areas/admin/Views/blog_blog/CatalogManage.cshtml
@@ -1,10 +1,12 @@
 ﻿@{
     ViewBag.Title = "CatalogManage";
 }
-
+@*layui*@
+<link href="@Url.Content("~/content/layui/css/layui.css")" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="@Url.Content("~/content/layui/layui.js")"></script>
 
 <div data-options="region:'center'" id="tt">
-    <table id="dg" class="easyui-datagrid" style="width:100%;height:550px"
+    <table id="dg" class="easyui-datagrid" style="width:50%;height:550px"
            url="/blog_blog/LoadCatalog"
            toolbar="#toolbar" pagination="true"
            rownumbers="true" fitcolumns="true" singleselect="true">
@@ -12,14 +14,18 @@
             <tr>
                 <th field="Id" width="30">ID</th>
                 <th field="Name" width="50">栏目名称</th>
-                <th field="AddTime" width="50">添加时间</th>
+                @*<th field="AddTime" width="50">添加时间</th>*@
                 <th data-options="field:'_operate',width:80,align:'center',formatter:formatOper">操作</th>
             </tr>
         </thead>
     </table>
 </div>
+
 <script type="text/javascript">
     function formatOper(val, row, index) {
-        return '<a href="/manage/catalogmodify/' + row.Id + '">修改</a> <a href="javascript:if(confirm(\'确实要删除吗?\'))location=\'/blog_blog/catalogdel/' + row.Id + '\'">删除</a>';
+        return '<a href="/admin/blog_blog/catalogmodify/' + row.Id + '">修改</a> <a href="javascript:if(confirm(\'确实要删除吗?\'))location=\'/blog_blog/catalogdel/' + row.Id + '\'">删除</a>';
     }
 </script>
+
+
+
