--- a/Blog/branches/ycy/code/webSite/Areas/admin/Views/sys_Home/Index.cshtml
+++ b/Blog/branches/ycy/code/webSite/Areas/admin/Views/sys_Home/Index.cshtml
@@ -25,8 +25,10 @@
     <form id="form1">
         <div data-options="region:'north'" class="f_north">
             <div style="float: left;">
-                <span style="float: left; padding-left: 10px; font-size: 13pt; letter-spacing: 1px;">@rui.configHelper.prjName @*-@db.bll.loginAdminHelper.getOrgName()-<span id="deptName">@Model.loginDeptName</span>*@</span>
-            </div>
+                <a href="@Url.Content("~/onlineSell/Home/Index") " target="_blank">
+                    <span style="float: left; padding-left: 10px; font-size: 13pt; letter-spacing: 1px;">@rui.configHelper.prjName @*-@db.bll.loginAdminHelper.getOrgName()-<span id="deptName">@Model.loginDeptName</span>*@</span>
+                </a>
+</div>
             <div style="float: right; padding-top: 0px; margin-top: 0px;">
                 <span style="float: right; font-size: 12px; height: 30px; padding-right: 8px;">
                     今天是<span id="time"></span>，@db.bll.loginAdminHelper.getOrgDeptName(db.efHelper.newDc())&nbsp;@Model.loginUserName (@Model.loginUserCode)&nbsp;
