--- a/Blog/branches/ycy/code/webSite/Areas/onlineSell/Views/Home/Blog.cshtml
+++ b/Blog/branches/ycy/code/webSite/Areas/onlineSell/Views/Home/Blog.cshtml
@@ -10,7 +10,7 @@
         <div class="post">
             <h1 class="postTitle">
 
-                <a id="cb_post_title_url" class="postTitle2 vertical-middle" href="https://www.cnblogs.com/ycy0430/p/13734812.html">
+                <a id="cb_post_title_url" class="postTitle2 vertical-middle" href="#">
                     <span>@Model.Title</span>
                 </a>
 
@@ -30,12 +30,12 @@
                 </div>
             </div>
             <div class="postDesc">
-                <span id="post-date">2020-09-26 13:51</span>&nbsp;
-                <a href="https://www.cnblogs.com/ycy0430/">ycy0430</a>&nbsp;
+                <span id="post-date">@Model.AddTime.ToString()</span>&nbsp;
+                <a href="/onlineSell/Home/Index">ycy0430</a>&nbsp;
                 阅读(<span id="post_view_count">0</span>)&nbsp;
                 评论(<span id="post_comment_count">0</span>)&nbsp;
-                <a href="https://i.cnblogs.com/EditPosts.aspx?postid=13734812" rel="nofollow">编辑</a>&nbsp;
-                <a href="javascript:void(0)" onclick="AddToWz(13734812);return false;">收藏</a>
+                <a href="#" >编辑</a>&nbsp;
+                <a href="#">收藏</a>
             </div>
         </div>
 
