--- a/Blog/branches/ycy/code/webSite/Views/Login/loginAdmin.cshtml
+++ b/Blog/branches/ycy/code/webSite/Views/Login/loginAdmin.cshtml
@@ -69,7 +69,7 @@
 </head>
 <body>
     <div id="UserLogin_container">
-        <div id="Logo">@rui.configHelper.prjName</div>
+        @*<div id="Logo">@rui.configHelper.prjName</div>*@
         <!--Logo-->
         <div id="UserLogin_BlankBg">
             <div id="UserLogin_left">
@@ -133,7 +133,7 @@
         <img style="width: 124px; height: 124px; position: absolute; top: 50%; left: 50%; margin-left: -62px; margin-top: -62px;" src="/Content/images/loading.gif" />
     </div>
     <div id="footer">
-        框架支持：南京云宝网络有限公司   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 功能设计：Ycy &nbsp; &nbsp; &nbsp; &nbsp;
+        <a href="https://github.com/ycy0430" target="_blank">Copyright ©@DateTime.Now.Year ycy</a>
     </div>
 </body>
 </html>
