--- a/Blog/branches/ycy/code/webSite/Areas/admin/Views/blog_blog/CatalogManage.cshtml
+++ b/Blog/branches/ycy/code/webSite/Areas/admin/Views/blog_blog/CatalogManage.cshtml
@@ -5,7 +5,7 @@
 <link href="@Url.Content("~/content/layui/css/layui.css")" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="@Url.Content("~/content/layui/layui.js")"></script>
 
-<div data-options="region:'center'" id="tt">
+<div data-options="region:'center'" id="tt" style="margin-top:20px;margin-left:36px">
     <table id="dg" class="easyui-datagrid" style="width:50%;height:550px"
            url="/blog_blog/LoadCatalog"
            toolbar="#toolbar" pagination="true"
