--- a/Blog/branches/ycy/code/webSite/Areas/onlineSell/Views/Home/Index.cshtml
+++ b/Blog/branches/ycy/code/webSite/Areas/onlineSell/Views/Home/Index.cshtml
@@ -13,7 +13,14 @@
 @for (int i = 0; i < listBlog.Count; i++){
     if (@Convert.ToInt32(Request["catalogid"]) == 0 || @listBlog[i].catalogId == @Convert.ToInt32(Request["catalogid"]))
     {
-    var n = @listBlog[i].catalogId-1;
+    var n = 0;
+    for (int j = 0; j < listCatalog.Count; j++)
+    {
+        if (@listBlog[i].catalogId == @listCatalog[j].Id)
+        {
+            n = j;
+        }
+    }
     <div class="day">
 
         <div class="dayTitle">
@@ -25,13 +32,12 @@
             <a id="homepage1_HomePageDays_DaysList_ctl00_DayList_TitleUrl_0" class="postTitle2" href="/onlineSell/Home/Blog/@listBlog[i].Id">@listBlog[i].Title</a>
         </div>
         <div class="postCon">
-            <div class="c_b_p_desc " id="postlist_postbody_13734812">
+            <div class="c_b_p_desc " style="height:30px">
                 @listBlog[i].Content
             </div>
-            <script type="text/javascript">getBlogPostBody(13734812);</script>
         </div>
         <div class="clear"></div>
-        <div class="postDesc">posted @@ @listBlog[i].AddTime.ToString() ycy 阅读(1) 评论(0) @*@n 分类 @listCatalog[n].Name*@ </div>
+        <div class="postDesc">posted @@ @listBlog[i].AddTime.ToString() ycy @*阅读(1) 评论(0)*@  <a id="blog_nav_myhome" class="menu" href="/onlineSell/Home?catalogid=@listCatalog[n].Id">分类: @listCatalog[n].Name</a>  </div>
         <div class="clear"></div>
 
     </div>
