--- a/Blog/branches/ycy/code/webSite/Areas/onlineSell/Views/_LayoutPage1.cshtml
+++ b/Blog/branches/ycy/code/webSite/Areas/onlineSell/Views/_LayoutPage1.cshtml
@@ -17,6 +17,7 @@
     <link type="text/css" rel="stylesheet" href="/include/index_files/blog-common.css">
     <link id="MainCss" type="text/css" rel="stylesheet" href="/include/index_files/bundle-CodingLife.css">
     <link type="text/css" rel="stylesheet" href="/include/index_files/128442.css">
+    <link type="text/css" rel="stylesheet" href="/Content/css/ycy.css">
     <link id="mobile-style" media="only screen and (max-width: 768px)" type="text/css" rel="stylesheet" href="/include/index_files/bundle-CodingLife-mobile.css">
     <link title="RSS" type="application/rss+xml" rel="alternate" href="http://www.cnblogs.com/ycy0430/rss">
     <link title="RSD" type="application/rsd+xml" rel="EditURI" href="http://www.cnblogs.com/ycy0430/rsd.xml">
@@ -25,8 +26,16 @@
     <script src="/include/index_files/jquery.js" type="text/javascript"></script>
     <script type="text/javascript">var currentBlogApp = 'ycy0430', cb_enable_mathjax = false; var isLogined = false;</script>
     <script src="/include/index_files/blog-common.js" type="text/javascript"></script>
+
+
+
+    <link rel="stylesheet" type="text/css" href="/include/assets/waifu.css" />
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+
+
 </head>
 <body>
+
     <a name="top"></a>
 
     <!--done-->
@@ -56,8 +65,8 @@
                     }
 
 
-                    
-                        <li><a id="blog_nav_admin" class="menu" rel="nofollow" href="/" target="_blank">管理</a></li>
+                    <li class="li-r"><a id="blog_nav_admin" class="menu" rel="nofollow" href="/onlineSell/Home/about">关于</a></li>
+                    <li class="li-r"><a id="blog_nav_admin" class="menu" rel="nofollow" href="/" target="_blank">管理</a></li>
                     
                 </ul>
                 <div class="blogStats">
@@ -83,13 +92,36 @@
                     @Html.Partial("~/Areas/onlineSell/Views/_SideBar.cshtml")
                 </div><!--end: sideBarMain -->
             </div><!--end: sideBar 侧边栏容器 -->
-            <div class="clear"></div>
+
         </div><!--end: main -->
         <div class="clear"></div>
+
+
+
+
         <div id="footer">
             <!--done-->
             <a href="https://github.com/ycy0430" target="_blank" style="color:#ccc">Copyright ©@DateTime.Now.Year ycy</a> 
         </div><!--end: footer -->
     </div><!--end: home 自定义的最大容器 -->
+
+    <div class="waifu">
+        <div class="waifu-tips"></div>
+        <canvas id="live2d" width="280" height="250" class="live2d"></canvas>
+        <div class="waifu-tool">
+            <span class="fui-home"></span>
+            <span class="fui-chat"></span>
+            <span class="fui-eye"></span>
+            <span class="fui-user"></span>
+            <span class="fui-photo"></span>
+            <span class="fui-info-circle"></span>
+            <span class="fui-cross"></span>
+        </div>
+    </div>
+
+    <script src="/include/assets/waifu-tips.js"></script>
+    <script src="/include/assets/live2d.js"></script>
+    <script type="text/javascript">initModel("/include/assets/")</script>
+
 </body>
 </html>
