--- a/Blog/branches/ycy/code/webSite/Content/easyui/bootstrap/easyui.css
+++ b/Blog/branches/ycy/code/webSite/Content/easyui/bootstrap/easyui.css
@@ -1295,7 +1295,7 @@
 }
 .datagrid-header-row,
 .datagrid-row {
-  height: 25px;
+  height: 25px!important;
 }
 .datagrid-header td,
 .datagrid-body td,
@@ -1319,7 +1319,7 @@
   font-size: 12px;
 }
 .datagrid-header .datagrid-cell {
-  height: auto;
+  height: 25px!important;
 }
 .datagrid-header .datagrid-cell span {
   font-size: 12px;
