添加评论打赏功能
添加评论打赏功能

--- a/Blog/trunk/code/webSite/Areas/onlineSell/Views/_SideBar.cshtml
+++ b/Blog/trunk/code/webSite/Areas/onlineSell/Views/_SideBar.cshtml
@@ -14,7 +14,7 @@
 
 
     <div id="leftcontentcontainer">
-        <div id="blog-sidecolumn">
+        @*<div id="blog-sidecolumn">
             <div id="sidebar_search" class="sidebar-block">
                 <div id="sidebar_search" class="mySearch">
                     <h3 class="catListTitle">搜索</h3>
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>*@
 
             <div id="sidebar_recentposts" class="sidebar-block">
                 <div class="catListEssay">
