--- a/Blog/trunk/code/webSite/Areas/onlineSell/Views/Home/Index.cshtml
+++ b/Blog/trunk/code/webSite/Areas/onlineSell/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
         </div>
         <div class="postCon">
             <div class="c_b_p_desc " id="content" style="height:30px">
-                @listBlog[i].Content
+                @listBlog[i].Content.Substring(0, 500)
             </div>
         </div>
         <div class="clear"></div>
